--- a/William Antony's Portfolio/index.html
+++ b/William Antony's Portfolio/index.html
@@ -130,7 +130,8 @@ https://templatemo.com/tm-506-tinker
             </div>
             <div class="row" style="text-align: center;">
                 <div class="primary-blue-button">
-                    <a href="#" class="scroll-link" data-id="contact-us">Continue Reading</a>
+                    <br><br><br><br><br><br>
+                    <a href="#" class="scroll-link" data-id="testimonial">List of project i have worked on</a>
                 </div>
             </div>
         </div>
@@ -212,23 +213,23 @@ https://templatemo.com/tm-506-tinker
     </section> -->
 
 
-    <!-- <section id="testimonial">
+    <section id="testimonial">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     <div id="owl-testimonials" class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>“ Quisque ullamcorper odio a nisl lacinia dictum. Vestibulum malesuada ipsum in turpis finibus, ut sagittis erat scelerisque. Curabitur non risus fringilla libero accumsan molestie et quis justo. ”</p>
-                                <h4>George Rich</h4>
-                                <span>Marketing Head</span>
+                                <p>“ Membuat spam filter dengan menggunakan teknik Naive Bayes.”</p>
+                                <h4>Natural Language Processing</h4>
+                                <!-- <span>Marketing Head</span> -->
                             </div>
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>“ Suspendisse magna mauris, convallis vel finibus eget, lobortis dictum neque. Nam tincidunt metus nec eros dignissim consectetur. ”</p>
-                                <h4>John Henry</h4>
-                                <span>Art Director</span>
+                                <p>“ Membuat teknik klasifikasi data dan clustering data. ”</p>
+                                <h4>Artificial Neural Network</h4>
+                                <!-- <span>Art Director</span> -->
                             </div>
                         </div>
                         <div class="item">
@@ -249,7 +250,7 @@ https://templatemo.com/tm-506-tinker
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- <div class="tabs-content" id="blog">
         <div class="container">
