--- a/William Antony's Portfolio/index.html
+++ b/William Antony's Portfolio/index.html
@@ -234,18 +234,18 @@ https://templatemo.com/tm-506-tinker
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>“ Aenean semper aliquam est ut maximus. Fusce id diam eget orci lobortis ultricies at ac velit. Curabitur laoreet massa et fringilla sagittis. ”</p>
-                                <h4>Danny Cute</h4>
-                                <span>Founder</span>
+                                <p>“ Membuat aplikasi BearAHand. ”</p>
+                                <h4>Software Engineering</h4>
+                                <!-- <span>Founder</span> -->
                             </div>
                         </div>
-                        <div class="item">
+                        <!-- <div class="item">
                             <div class="testimonials-item">
                                 <p>“ Maecenas eu odio pharetra, elementum lorem eget, efficitur erat. Duis eget justo non nisi iaculis vestibulum. Aliquam erat volutpat. ”</p>
                                 <h4>Richard Beal</h4>
                                 <span>Senior Developer</span>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
